--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -47,8 +47,8 @@ body {
 
 /* Each tile full-width like your reference */
 .tile {
-  width: 70%;
-  max-width: 600px;
+  width: 50%;
+  max-width: 500px;
   padding: 17px 20px;
   border-radius: 18px;
   border: none;
@@ -114,11 +114,11 @@ body {
 }
 
 .tile-feedback {
-  background: linear-gradient(135deg, #2bd9ff, #5feaff);
+  background: linear-gradient(135deg, #ABDBB4, #5feaff);
 }
 
 .tile-support {
-  background: linear-gradient(135deg, #f2c45b, #f5d27a);
+  background: linear-gradient(135deg, #EOA17F, #f5d27a);
 }
 
 /* ===========================================
